--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ Sort by <i class="fa fa-caret-down" aria-hidden="true"></i>
 </div>
 </div>
 
-<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="vendor/jquery/jquery.min.js" type="22be1ce08241affa445a56d9-text/javascript"></script>
+<script data-cfasync="false" src="https://cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="vendor/jquery/jquery.min.js" type="22be1ce08241affa445a56d9-text/javascript"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js" type="22be1ce08241affa445a56d9-text/javascript"></script>
 
 <script src="vendor/jquery-easing/jquery.easing.min.js" type="22be1ce08241affa445a56d9-text/javascript"></script>
@@ -609,7 +609,7 @@ Sort by <i class="fa fa-caret-down" aria-hidden="true"></i>
 <script src="vendor/owl-carousel/owl.carousel.js" type="22be1ce08241affa445a56d9-text/javascript"></script>
 
 <script src="js/custom.js" type="22be1ce08241affa445a56d9-text/javascript"></script>
-<script src="../../../ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="22be1ce08241affa445a56d9-|49" defer=""></script></body>
+<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="22be1ce08241affa445a56d9-|49" defer=""></script></body>
 
 <!-- Mirrored from ScubeTech/preview/vidoe-v2-3/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Feb 2021 10:31:22 GMT -->
 </html>
