--- a/users.html
+++ b/users.html
@@ -488,7 +488,7 @@ Education <a title="" data-placement="top" data-toggle="tooltip" href="#" data-o
 <script src="vendor/owl-carousel/owl.carousel.js" type="ac1df01bbfbab8b1011acab2-text/javascript"></script>
 
 <script src="js/custom.js" type="ac1df01bbfbab8b1011acab2-text/javascript"></script>
-<script src="../../../ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="ac1df01bbfbab8b1011acab2-|49" defer=""></script></body>
+<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="ac1df01bbfbab8b1011acab2-|49" defer=""></script></body>
 
 <!-- Mirrored from ScubeTech/preview/vidoe-v2-3/channels.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Feb 2021 10:31:35 GMT -->
 </html>
